AC_INIT(configure)
gp_configure_options=$*
AC_CHECK_PROGS( MAKE, make )
if test -z "$MAKE";  then
AC_PATH_PROGS( MAKE, make, , /usr/ccs/bin )
fi
if test -z "$MAKE";  then
AC_MSG_ERROR([cannot find make])
fi
AC_SUBST(gp_configure_options)
AC_CONFIG_AUX_DIR([cnf])
AC_CANONICAL_SYSTEM
AC_PROG_CC
AC_PROG_MAKE_SET
AC_SUBST(gapdir)
gapdir=`(cd ../..;pwd)`
AC_OUTPUT(Makefile xgap.sh:xgap.shi)
